Agregando un correcto text-wrap a los comentarios.

--- a/public/css/estilarComentarios.css
+++ b/public/css/estilarComentarios.css
@@ -31,3 +31,7 @@
   display: flex;
   justify-content: space-between;
 }
+
+#commentsSection p {
+  text-wrap: auto;
+}
